// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage show component with image from context 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage show component with image from props 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://placekitten.com/640/360"
/>
`;
